Changeset to tests / service api